--- a/templates/product.liquid
+++ b/templates/product.liquid
@@ -199,16 +199,26 @@ Change 'false' to 'true' on the line below, to show them.
   </div>
 </div>
 
-<div class="next-prev-page">
-  <span class="inner">
-    {% if collection.previous_product %}
-    <a class="prev" href="{{ collection.previous_product }}" data-fill-with-product="{{ collection.previous_product | split: '/' | last }}"><script type="text/template"><img src="[img:medium]" title="[title]" /><i class="icon-{{ settings.prod_nextprev_mode }}-left"></i></script></a>
-    {% endif %}
-    {% if collection.next_product %}
-    <a class="next" href="{{ collection.next_product }}" data-fill-with-product="{{ collection.next_product | split: '/' | last }}"><script type="text/template"><i class="icon-{{ settings.prod_nextprev_mode }}-right"></i><img src="[img:medium]" title="[title]" /></script></a>
-    {% endif %}
-  </span>
+
+{% for article in blogs.product-features.articles %}
+
+<div class="bespoke-product-feature">
+
+{% if article.tags contains product.title %}
+
+  <div class="bespoke-article">
+
+    <h2>{{ article.title }}</h2>
+
+    <p>{{ article.excerpt_or_content }}
+
+  </div>
+
 </div>
+
+{% endif %}
+
+{% endfor %}
 
 
 {% if product.available and product.variants.size > 1 %}
