--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -123,13 +123,7 @@
 
     {% if template == "index" %}
 
-  <div id="bespoke-logo">
-
-    <img src="{{ 'klurskin-stamp.png' | asset_url }}" alt="{{ shop.name | escape }}" />
-
-  </div>
-
-  <div id="bespoke-page-content">
+  <div>
 
     {{ content_for_layout }}
 
