--- a/templates/index.liquid
+++ b/templates/index.liquid
@@ -1,65 +1,80 @@
-{% if settings.home_content_type == 'home_image_active' %}
-<div class="central">
-  <div id="large-logo">
-    <a href="{{ settings.home_image_url }}">
-      <img style="width:{{ settings.home_image_w }}px" src="{{ 'home_image.png' | asset_url }}" alt="{{ shop.name | escape }}" />
-    </a>
-  </div>
+<div class="temp-index">
+
+  <h1>Narrative</h1>
+
+  <p>
+
+    Hi Shopify friends! Welcome to the explorative mockup of Narrative, the first Shopify theme I'd like to build.
+
+    <br><br>
+
+    Hopefully a tad more exciting than flats, created just for you to share an exciting theme concept. Please keep in mind, this is a rough draft. I'd like to ask your thoughts on my idea prior to diving deep into development.
+
+    <br><br>
+
+    - Narrative offers a creative new way of showcasing products and content on Shopify, attracting a wider audience.
+
+    <br><br>
+    - Built using Timber as a foundation ( not this example, but the real deal )
+    <br><br>
+    - Focus on UX with clean, minimal, intuitive design and considered transitions and animations
+    <br><br>
+    - Performant css-only parallax scrolling on product pages.
+    <br><br>
+    A highly-adaptable story-telling aspect. May be adapted to provide more details about a product, convey a brand identity, showcase recent press, show lookbook images of an item, and so much more.
+    <br><br>
+    Every blog article that is tagged with the name of a product, will show on the cooresponding products page. There will be few select 'base style' product tempelates to choose from with a similar idea.
+  </p>
+
+  <a href="/products/rose-white-tea-gentle-glycolic-cleanser">Example One</a>
+  <a>Example Two</a>
+  <a>Example Three</a>
+
+
 </div>
-{% endif %}
 
-{% if settings.home_content_type == 'home_type_active' %}
-<div class="overlay-type overlay">
-  <div class="inner">
-    <div>
-      {% if settings.home_type_url != blank %}<a href="{{ settings.home_type_url }}">{% endif %}
-      <h1 class="line-1">{{ settings.home_type_1_txt }}</h1>
-      <h2 class="line-2">{{ settings.home_type_2_txt }}</h2>
-      {% if settings.home_type_url != blank %}</a>{% endif %}
-    </div>
-  </div>
-</div>
-{% endif %}
+<style>
 
-{% if settings.home_content_type == 'home_page_1_active' %}
-{% assign page = pages[settings.home_page_1] %}
+  .temp-index {
 
-<div class="bespoke central {% if settings.home_content_fullwidth %}wide{% endif %}">
+    background: #ebeef0;
+    height: 90vh;
+    margin: 5vh;
+    overflow: scroll;
 
-  {{ page.content }}
+  }
 
-</div>
+  h1 {
 
-{% endif %}
+    font-family: 'Obsidian A', 'Obsidian B';
+    text-transform: lowercase;
+    vertical-align: baseline;
+    font-style: italic;
+    font-weight: 400;
+    font-size: 58px;
+    margin: 0;
+
+  }
+
+  p {
 
 
-{% if settings.home_content_type == 'home_prod_layout_active' %}
-<div class="side-gutter double-gutter">
-  <div class="product-list {% if settings.home_prod_layout contains 'dynamic' %}jiggly-split {{ settings.home_prod_layout }}{% endif %}">
-    {% if settings.home_prod_layout contains 'rows' %}
-    {% assign product_class = 'column ' | append: settings.home_prod_layout | remove: 'rows-' %}
-    {% endif %}
+    font-family: 'Gotham SSm A', 'Gotham SSm B';
+    padding: 2.5%;
+    font-style: normal;
+    font-weight: 300;
+    font-size: 14px;
+    margin: 0;
 
-    {% for product in collections[settings.home_prod_select].products %}
-    {% include 'product-block' %}
-    {% endfor %}
-  </div>
-</div>
-{% endif %}
+  }
 
-{% if settings.home_content_type == 'home_coll_layout_active' %}
-<div class="side-gutter double-gutter">
-  {% if settings.home_coll_layout contains 'rows' %}
-  {% assign product_class = 'column ' | append: settings.home_coll_layout | remove: 'rows-' %}
-  {% endif %}
+  a {
 
-  <div class="product-list {% if settings.home_coll_layout contains 'dynamic' %}jiggly-split {{ settings.home_coll_layout }}{% endif %}">
-    {% for link in linklists[settings.home_coll_select].links %}
-    {% if link.type == 'collection_link' %}
-    {% assign collection = link.object %}
-    {% include 'collection-block' %}
-    {% endif %}
-    {% endfor %}
-  </div>
-</div>
-{% endif %}
+    font-family: 'Obsidian A', 'Obsidian B';
+    font-size: 18px;
+    font-weight: 400;
+
+
+  }
+
+</style>
