--- a/templates/page.about.liquid
+++ b/templates/page.about.liquid
@@ -1,9 +1,102 @@
-<div class="bespoke-page">
 
-  <div class="rte">
+<div class="bespoke-parallax">
 
-    {{ page.content }}
+  {% for article in blogs.product-features.articles %}
+
+  <div class="parallax-group">
+
+  <div class="parallax-layer parallax-layer-back">
+
+    {{ article.content }}
+
+  </div>
+
+  <div class="parallax-group">
+
+  <div class="parallax-layer parallax-layer-base">
+
+    <div class="parallax-title">{{ article.excerpt }}</div>
+
+  </div>
 
   </div>
 
 </div>
+
+
+{% endfor %}
+
+</div>
+
+<style>
+
+
+  p {
+
+    color: #000;
+    padding: 0;
+    margin: 0;
+
+  }
+
+ .bespoke-parallax {
+
+    height: 100vh;
+    overflow-x: hidden;
+    overflow-y: auto;
+    -webkit-perspective: 1px;
+    perspective: 1px;
+    font-size: 20px;
+
+  }
+
+  .parallax-group {
+
+    position: relative;
+    height: 100vw;
+
+  }
+
+  .group:last-of-type {
+
+    height: 50vw;
+
+  }
+
+  .parallax-title {
+
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    -webkit-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+
+  }
+
+  .parallax-layer {
+
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    left: 0;
+    top: 0;
+
+
+  }
+
+  .parallax-layer-back {
+
+    -webkit-transform: translateZ(-1px) scale(2);
+    transform: translateZ(-1px) scale(2);
+
+  }
+
+  .parallax-layer-base {
+
+    -webkit-transform: translateZ(0);
+    transform: translateZ(0);
+
+  }
+
+
+</style>
